--- a/frontend/src/components/about/about.css
+++ b/frontend/src/components/about/about.css
@@ -1,21 +1,48 @@
-#about h3 {
-    text-align: center;
-    font-size: 25px;
+#about {
+    background: none !important;         /* Removes any background color */
+    border: none !important;             /* Removes any border */
+    box-shadow: none !important;         /* Removes shadow, if there is any */
+    padding: 20px 0;          /* Adds space above and below the section */
+    margin: 0 auto;           /* Centers content if there's a fixed width */
+    text-align: center;       /* Centers text */
+    font-size: 20px;
+
+}
+/* about me */
+#about p{
+    font-size: 18px;
+    line-height: 1.5;
+    margin-top: 10px;
+    color: #96072a
+
 }
 
+
+#about h3 {
+    text-align: center;
+    font-size: 40px;
+    margin-bottom: 20px;
+    text-decoration: underline;
+    color: #000000
+    
+}
+/* hide unhide info
 .toggler {
     position: absolute;
     background-color: #333;
     cursor: pointer;
     left: 0;
     font-size: medium;
-    color: #fff;
+    color: #770e0e;
     margin-top: 0;
 }
+*/
 
-
-
-
+.skills img {
+    width: 40px;  /* You can adjust this to 30px, 50px, etc. */
+    height: auto;
+    margin: 5px;
+}
 
 
 
