--- a/frontend/src/components/navbar/navbar.css
+++ b/frontend/src/components/navbar/navbar.css
@@ -1,33 +1,58 @@
 #navbar {
     display: flex;
     justify-content: space-evenly;
-    background: #0A2463;
+    background: #7d0d16;
     padding: 15px 0;
     align-items: center;
     margin-bottom: 50px;
     height: 15%;
     color: #ffffff;
     font-size: 25px;
-    font-family:"Instrument Serif", sans-serif;
+    font-family: "Times New Roman", Times, serif;
     position: -webkit-sticky; /* Safari */
     position: sticky;
     top: 0;
+    margin-right: 0;
+    margin-left: 0;
     }
 
-
+/* about project experience */
     #navbar a {
-    color: #ccc;
+    color: #000000;
+    text-decoration: none;
+    font-size: 40px;
+    margin-right: 15px;
+    margin-left: 15px;
+    
+    }
+
+/* changes the about when i hover */
+    #navbar a:hover {
+    color: #4f0707;
+    font-style: italic;
+    }
+
+/* to make italics , underline,bold 
+    font-style: italic;
+    font-weight: 600;
+    text-decoration: underline;
+    */
+
+/* perla ruiz del solar navbar */ 
+#navbar h1{
+    color: #000000;
     text-decoration: none;
     font-size: 30px;
-    }
+    margin-right: 15px;
+    margin-left: 15px;
+    font-weight: 100;
+    font-family: "Times New Roman", Times, serif;
 
-    #navbar a:hover {
-    color: #ccc;
-    }
+}
 
 
-
-
+/*font-family: 'Courier New', monospace;
+alternative font */ 
 
 
 
