--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -12,11 +12,12 @@ h2 {
     font-weight: 900;
     font-style: italic;
     font-size: 2.5rem;
-    color: #121c7b;
+    color: #000000;
     margin-bottom: 1.5rem;
     text-align: center;
+
 }
-  
+
 
 
 
