--- a/frontend/src/components/chat/chat.css
+++ b/frontend/src/components/chat/chat.css
@@ -7,7 +7,8 @@
     max-width: 550px;
     margin: 60px auto;
     font-family: 'Georgia', serif;
-    margin-top: 100px;
+    margin-top: 120px;
+    margin-bottom:120px;
 
 }
 
@@ -30,6 +31,7 @@
     background-color: #5959688d;       /* or any color you want */
 }
 
+/*type your question here*/
 #chat input::placeholder {
     color: #141313;  /* or any color you want */
     text-align: center
@@ -69,6 +71,7 @@
 }
 
   /* Chat message styles */
+/*ai chat btwn users and ai*/
 .chatbox {
     margin-top: 10px;
     padding: 1px 15px;
@@ -77,14 +80,14 @@
     text-align: left;
 
 }
-
+/* ai responses*/
 .user-message {
     color: #000;
     font-weight: bold;
-    text-align: left;       /* Align user messages to the right */
+    text-align: left;       /* Align user messages to the left */
 }
 
-
+/* user response*/
 .chatbot-response {
     color: #fdf8f8;
     text-align: right;        /* Align AI messages to the left */
@@ -93,8 +96,7 @@
 }
 
 .chatbot-greeting {
-    color: #000000c0; /* Use any color you'd like */
-    font-size: 1.2rem;
+    color: #000; /* Use any color you'd like */
     font-weight: bold;
     margin-bottom: 10px;
 }
