--- a/frontend/src/components/profile/profile.css
+++ b/frontend/src/components/profile/profile.css
@@ -2,11 +2,14 @@
     display: flex;
     align-items: center;
     gap: 40px;
-    margin-bottom: 30px;
+    margin: 50px auto 30px auto;
     font-size: 2.1rem;
-    margin-left: 30px;
-    margin-right: 30px;
-    
+    max-width: 1200px;
+    padding: 0, 30px;
+    padding-inline: 40px;
+    justify-content: center; /* centers content inside */
+    flex-wrap:nowrap;
+
 }
 #profile-text {
     
