--- a/frontend/src/components/profile/profile.css
+++ b/frontend/src/components/profile/profile.css
@@ -39,7 +39,18 @@
     display: flex;
     gap: 20px;
     margin-top: 10px;
+    
 }
+
+.icons a:visited,
+.icons a:focus,
+.icons a:active {
+  text-decoration: none;
+  outline: none;
+  border: none;
+  color: inherit;
+}
+
 /* boston university student*/
 #profile-text p {
     margin-top: 0;
