--- a/frontend/src/components/navbar/navbar.css
+++ b/frontend/src/components/navbar/navbar.css
@@ -5,33 +5,40 @@
     padding: 15px 0;
     align-items: center;
     margin-bottom: 50px;
-    height: auto;        /*  grow on small screens */
+    /*height: auto;         grow on small screens */
     color: #ffffff;
-    font-size: 25px;
+    /*font-size: 25px;*/
+    font-size: clamp(18px, 2.2vw, 25px);
     font-family: "Cormorant Garamond", serif; 
     font-weight: 300;
     position: -webkit-sticky; /* Safari */
     position: sticky;
     top: 0;
     margin: 0;                             /* override side margins */
-    flex-wrap: wrap;                       /* allow wrapping on smaller screens */
-    width: 100vw;                          /* make navbar stretch across screen */
+    flex-wrap: nowrap;                       /* allow wrapping on smaller screens */
+    width: 100% ;                       /* vw make navbar stretch across screen */
     z-index: 999;                          /* stay above other elements */
-    }
+    /* bottom gradient */
+    box-shadow: 0 2px 10px rgba(158, 159, 177, 0.3);
+
+}
 
 /* about project experience */
     #navbar a {
     color: #ffffff;
     text-decoration: none;
-    font-size: 40px;
+    /*font-size: 40px;*/
+    font-size: clamp(20px, 2.5vw, 40px);
     margin-right: 15px;
     margin-left: 15px;
+    transition: color 0.3s ease;
     
     }
 
 /* changes the about when i hover */
-    #navbar a:hover {
-    color: #112bbc;
+    #navbar a:hover,
+    #navbar a:focus {
+    color: #2c14e8;
     font-style: italic;
     }
 
@@ -45,7 +52,8 @@
 #navbar h1{
     color: #000000;
     text-decoration: none;
-    font-size: 30px;
+    /*font-size: 30px;*/
+    font-size: clamp(20px, 2vw, 30px);
     margin-right: 15px;
     margin-left: 15px;
     font-weight: 100;
@@ -82,6 +90,16 @@
     }
 }
 
+@media (max-width: 500px) {
+    #navbar a {
+    margin: 4px 8px;
+    }
+
+    #navbar {
+    gap: 8px;
+    padding: 10px 0;
+    }
+}
 
 
 /*font-family: 'Courier New', monospace;
