--- a/frontend/src/components/profile/profile.css
+++ b/frontend/src/components/profile/profile.css
@@ -129,8 +129,8 @@
 
 
 .profile-pic {
-    width: 180px;
-    height: 180px;
+    width: 250px;
+    object-fit: cover;
     border-radius: 50%;
     padding: 4px;
     background: linear-gradient(135deg, #000000, #2c14e8); /* blue to violet */
